# FireForm

./: .gitignore  pyproject.toml  requirements.txt
api/: main.py
api/errors/: base.py  handlers.py
api/routes/: forms.py  templates.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: DropZone.jsx  Layout.jsx  Sidebar.jsx  Toast.jsx
frontend/src/pages/: CreateTemplate.jsx  Dashboard.jsx  FillForm.jsx  Results.jsx  Templates.jsx
frontend/src/styles/: global.css
src/: file_manipulator.py  logging_config.py
tests/: test_errors.py  test_forms.py  test_llm.py  test_templates.py
